feat: added new section

--- a/index.html
+++ b/index.html
@@ -9,39 +9,157 @@
   </head>
   <body>
     <!-- header section starts -->
-    <header class="header">
-      <div class="header__wrapper">
-        <div class="header__left">
-          <a href="#"><img src="./images/Logo.svg" alt="header Logo" /></a>
+    <div class="bg__img">
+      <header class="header">
+        <div class="header__wrapper">
+          <div class="header__left">
+            <a href="#"><img src="./images/Logo.svg" alt="header Logo" /></a>
+          </div>
+          <div class="header__right">
+            <ul>
+              <li>Home <img src="./images/header-1.svg" alt="header img" /></li>
+              <li>
+                Listings <img src="./images/header-1.svg" alt="header img" />
+              </li>
+              <li>shop <img src="./images/header-1.svg" alt="header img" /></li>
+              <li>
+                About <img src="./images/header-1.svg" alt="header img" />
+              </li>
+              <li>Popular</li>
+              <li>Contact</li>
+              <li>Info</li>
+              <li>Blog</li>
+            </ul>
+            <button class="header__sign section__styles">
+              <img src="./images/header-2.svg" alt="header img" />
+              Sign in
+            </button>
+            <button class="header__btn section__styles">Submit Listing</button>
+          </div>
         </div>
-        <div class="header__right">
-          <ul>
-            <li>Home <img src="./images/header-1.svg" alt="header img" /></li>
-            <li>
-              Listings <img src="./images/header-1.svg" alt="header img" />
-            </li>
-            <li>Blog <img src="./images/header-1.svg" alt="header img" /></li>
-            <li>Pages <img src="./images/header-1.svg" alt="header img" /></li>
-            <li>About</li>
-            <li>Contact</li>
-          </ul>
-          <button class="header__sign header__styles">
-            <img src="./images/header-2.svg" alt="header img" />
-            Sign in
-          </button>
-          <button class="header__btn header__styles">Submit Listing</button>
+      </header>
+      <!-- header section ends -->
+      <!-- home section starts -->
+      <section class="home">
+        <div class="container">
+          <div class="home__wrapper">
+            <h2 class="home__subtitle home__styles">
+              Find cars for sale and for rent near you
+            </h2>
+            <h1 class="home__title">Find Your Perfect Car</h1>
+            <div class="home__type">
+              <h3 class="home__type-title home__styles">All</h3>
+              <h3 class="home__type-title home__styles">New</h3>
+              <h3 class="home__type-title home__styles">Used</h3>
+            </div>
+            <div class="home__search">
+              <h3 class="home__search--title home__styles">
+                Any Makes <img src="./images/home-1.svg" alt="homei img " />
+              </h3>
+              <h3 class="home__search--title home__styles">
+                Any Models <img src="./images/home-1.svg" alt="homei img " />
+              </h3>
+              <h3 class="home__search--title home__styles">
+                Prices: All Prices
+              </h3>
+              <button class="home__btn home__styles">
+                <img src="./images/home-2.svg" alt="home img" />
+                Search Cars
+              </button>
+            </div>
+            <p class="home__p home__styles">Or Browse Featured Model</p>
+            <div class="home__car--type">
+              <a class="home__car--type-link" href="#" target="_blank">
+                <button class="home__car--type-btn home__styles">
+                  <img src="./images/home-3.svg" alt="home img" /> suv
+                </button></a
+              >
+              <a class="home__car--type-link" href="#" target="_blank">
+                <button class="home__car--type-btn home__styles">
+                  <img src="./images/home-4.svg" alt="home img" /> Sedan
+                </button></a
+              >
+              <a class="home__car--type-link" href="#" target="_blank">
+                <button class="home__car--type-btn home__styles">
+                  <img src="./images/home-5.svg" alt="home img" /> Hatchback
+                </button></a
+              >
+              <a class="home__car--type-link" href="#" target="_blank">
+                <button class="home__car--type-btn home__styles">
+                  <img src="./images/home-6.svg" alt="home img" /> Coupe
+                </button></a
+              >
+              <a class="home__car--type-link" href="#" target="_blank">
+                <button class="home__car--type-btn home__styles">
+                  <img src="./images/home-7.svg" alt="home img" /> Hybrid
+                </button></a
+              >
+            </div>
+          </div>
         </div>
-      </div>
-    </header>
-    <!-- header section ends -->
-    <!-- home section starts -->
-    <section class="home">
-      <div class="home__wrapper">
-        <h2 class="home__subtitle">Find cars for sale and for rent near you</h2>
-        <h1 class="home__title">Find Your Perfect Car</h1>
-        <div class="home__search"></div>
+      </section>
+    </div>
+    <!-- home section ends -->
+    <!-- listing section starst -->
+    <section class="listing">
+      <div class="container">
+        <div class="listing__wrapper">
+          <div class="listing__top">
+            <h2 class="listing__title title">Explore Our Premium Brands</h2>
+            <h3 class="listing__subtitle section__styles">
+              Show All Brands
+              <img src="./images/listing-1.svg" alt="listing img" />
+            </h3>
+          </div>
+          <div class="listing__bottom">
+            <a href="https://www.audi.com" target="_blank">
+              <button class="listing__btn">
+                <img src="./images/listing-2.svg" alt="listing img" />
+                <h4>Audi</h4>
+              </button></a
+            >
+            <a href="https://www.bmw.com" target="_blank">
+              <button class="listing__btn">
+                <img src="./images/listing-3.svg" alt="listing img" />
+                <h4>BMW</h4>
+              </button></a
+            >
+            <a href="https://www.ford.com/" target="_blank">
+              <button class="listing__btn">
+                <img src="./images/listing-4.svg" alt="listing img" />
+                <h4>Ford</h4>
+              </button></a
+            >
+            <a href="https://www.mercedes-benz.com/en/" target="_blank">
+              <button class="listing__btn">
+                <img src="./images/listing-5.svg" alt="listing img" />
+                <h4>Mercedes Benz</h4>
+              </button></a
+            >
+            <a href="https://www.peugeot.com/" target="_blank">
+              <button class="listing__btn">
+                <img src="./images/listing-6.svg" alt="listing img" />
+                <h4>Peugeot</h4>
+              </button></a
+            >
+            <a href="https://www.vw.com" target="_blank">
+              <button class="listing__btn">
+                <img src="./images/listing-7.svg" alt="listing img" />
+                <h4>Volkswagen</h4>
+              </button></a
+            >
+          </div>
+        </div>
       </div>
     </section>
-    <!-- home section ends -->
+    <!-- listing section ends -->
+    <!-- shop section starts -->
+    <section class="shop">
+      <div class="shop__wrapper">
+        <div class="shop__top"></div>
+        <div class="shop__bottom"></div>
+      </div>
+    </section>
+    <!-- shop section ends -->
   </body>
 </html>
