feat added new section

--- a/index.html
+++ b/index.html
@@ -155,9 +155,165 @@
     <!-- listing section ends -->
     <!-- shop section starts -->
     <section class="shop">
-      <div class="shop__wrapper">
-        <div class="shop__top"></div>
-        <div class="shop__bottom"></div>
+      <div class="container">
+        <div class="shop__wrapper">
+          <div class="shop__top">
+            <h2 class="shop__title title">Explore All Vehicles</h2>
+            <h3 class="shop__subtitle section__styles">
+              View All <img src="./images/listing-1.svg" alt="shop img" />
+            </h3>
+          </div>
+          <div class="shop__navigation">
+            <h3 class="shop__navigation--title section__styles">In Stock</h3>
+            <h3 class="shop__navigation--title section__styles">New Cars</h3>
+            <h3 class="shop__navigation--title section__styles">Used Cars</h3>
+          </div>
+          <div class="shop__bottom">
+            <div class="shop__card">
+              <div class="shop__card--box">
+                <h4 class="shop__card--subtitle">Great Price</h4>
+                <img src="./images/shop-1.svg" alt="shop img" />
+              </div>
+              <img src="./images/shop-2.svg" alt="shop img" />
+              <h3 class="shop__card--title">Ford Transit – 2021</h3>
+              <p class="shop__card--p">4.0 D5 PowerPulse Momentum 5dr AW…</p>
+              <div class="shop__card--info">
+                <h4 class="shop__card--info--title">
+                  <img src="./images/shop-3.svg" alt="shop img" />
+                  2500 Miles
+                </h4>
+                <h4 class="shop__card--info--title">
+                  <img src="./images/shop-4.svg" alt="shop img" />
+                  Diesel
+                </h4>
+                <h4 class="shop__card--info--title">
+                  <img src="./images/shop-5.svg" alt="shop img" />
+                  Manual
+                </h4>
+              </div>
+              <div class="shop__card--price">
+                <h3 class="shop__card--price--title">$22,000</h3>
+                <h4 class="shop__card--price--subtitle">
+                  View Details <img src="./images/shop-6.svg" alt="shop img" />
+                </h4>
+              </div>
+            </div>
+            <div class="shop__card">
+              <div class="shop__card--box">
+                <h4 class="shop__card--subtitle">Low Mileage</h4>
+                <img src="./images/shop-1.svg" alt="shop img" />
+              </div>
+              <img src="./images/shop-9.svg" alt="shop img" />
+              <h3 class="shop__card--title">New GLC – 2023</h3>
+              <p class="shop__card--p">
+                4.0 D5 PowerPulse Momentum 5dr AW… Geartronic Estate
+              </p>
+              <div class="shop__card--info">
+                <h4 class="shop__card--info--title">
+                  <img src="./images/shop-3.svg" alt="shop img" />
+                  50 Miles
+                </h4>
+                <h4 class="shop__card--info--title">
+                  <img src="./images/shop-4.svg" alt="shop img" />
+                  Petrol
+                </h4>
+                <h4 class="shop__card--info--title">
+                  <img src="./images/shop-5.svg" alt="shop img" />
+                  Automatic
+                </h4>
+              </div>
+              <div class="shop__card--price">
+                <h3 class="shop__card--price--title">$95,000</h3>
+                <h4 class="shop__card--price--subtitle">
+                  View Details <img src="./images/shop-6.svg" alt="shop img" />
+                </h4>
+              </div>
+            </div>
+            <div class="shop__card">
+              <img src="./images/shop-11.svg" alt="shop img" />
+              <h3 class="shop__card--title">Audi A6 3.5 – New</h3>
+              <p class="shop__card--p">
+                3.5 D5 PowerPulse Momentum 5dr AW… Geartronic Estate
+              </p>
+              <div class="shop__card--info">
+                <h4 class="shop__card--info--title">
+                  <img src="./images/shop-3.svg" alt="shop img" />
+                  100 Miles
+                </h4>
+                <h4 class="shop__card--info--title">
+                  <img src="./images/shop-4.svg" alt="shop img" />
+                  Petrol
+                </h4>
+                <h4 class="shop__card--info--title">
+                  <img src="./images/shop-5.svg" alt="shop img" />
+                  Automatic
+                </h4>
+              </div>
+              <div class="shop__card--price">
+                <h3 class="shop__card--price--title">$58,000</h3>
+                <h4 class="shop__card--price--subtitle">
+                  View Details <img src="./images/shop-6.svg" alt="shop img" />
+                </h4>
+              </div>
+            </div>
+            <div class="shop__card">
+              <img src="./images/shop-12.svg" alt="shop img" />
+              <h3 class="shop__card--title">Corolla Altis – 2023</h3>
+              <p class="shop__card--p">
+                3.5 D5 PowerPulse Momentum 5dr AW… Geartronic Estate
+              </p>
+              <div class="shop__card--info">
+                <h4 class="shop__card--info--title">
+                  <img src="./images/shop-3.svg" alt="shop img" />
+                  15000 Miles
+                </h4>
+                <h4 class="shop__card--info--title">
+                  <img src="./images/shop-4.svg" alt="shop img" />
+                  Petrol
+                </h4>
+                <h4 class="shop__card--info--title">
+                  <img src="./images/shop-5.svg" alt="shop img" />
+                  CVT
+                </h4>
+              </div>
+              <div class="shop__card--price">
+                <h3 class="shop__card--price--title">$45,000</h3>
+                <h4 class="shop__card--price--subtitle">
+                  View Details <img src="./images/shop-6.svg" alt="shop img" />
+                </h4>
+              </div>
+            </div>
+            <div class="shop__card">
+              <div class="shop__card--box">
+                <h4 class="shop__card--subtitle">Great Price</h4>
+                <img src="./images/shop-1.svg" alt="shop img" />
+              </div>
+              <img src="./images/shop-13.jpg" alt="shop img" />
+              <h3 class="shop__card--title">Ford Explorer 2023</h3>
+              <p class="shop__card--p">3.5 D5 PowerPulse Momentum 5dr AW …</p>
+              <div class="shop__card--info">
+                <h4 class="shop__card--info--title">
+                  <img src="./images/shop-3.svg" alt="shop img" />
+                  10 Miles
+                </h4>
+                <h4 class="shop__card--info--title">
+                  <img src="./images/shop-4.svg" alt="shop img" />
+                  Diesel
+                </h4>
+                <h4 class="shop__card--info--title">
+                  <img src="./images/shop-5.svg" alt="shop img" />
+                  Manual
+                </h4>
+              </div>
+              <div class="shop__card--price">
+                <h3 class="shop__card--price--title">$35,000</h3>
+                <h4 class="shop__card--price--subtitle">
+                  View Details <img src="./images/shop-6.svg" alt="shop img" />
+                </h4>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <!-- shop section ends -->
