--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
           </div>
           <div class="shop__bottom">
             <div class="shop__card">
-              <div class="shop__card--box">
+              <!-- <div class="shop__card--box">
                 <h4 class="shop__card--subtitle">Great Price</h4>
                 <img src="./images/shop-1.svg" alt="shop img" />
-              </div>
-              <img src="./images/shop-2.svg" alt="shop img" />
+              </div> -->
+              <img class="shop__img" src="./images/shop-2.svg" alt="shop img" />
               <h3 class="shop__card--title">Ford Transit – 2021</h3>
               <p class="shop__card--p">4.0 D5 PowerPulse Momentum 5dr AW…</p>
               <div class="shop__card--info">
@@ -193,17 +193,17 @@
               </div>
               <div class="shop__card--price">
                 <h3 class="shop__card--price--title">$22,000</h3>
-                <h4 class="shop__card--price--subtitle">
+                <h4 class="shop__card--price--subtitle section__styles">
                   View Details <img src="./images/shop-6.svg" alt="shop img" />
                 </h4>
               </div>
             </div>
             <div class="shop__card">
-              <div class="shop__card--box">
+              <!-- <div class="shop__card--box">
                 <h4 class="shop__card--subtitle">Low Mileage</h4>
                 <img src="./images/shop-1.svg" alt="shop img" />
-              </div>
-              <img src="./images/shop-9.svg" alt="shop img" />
+              </div> -->
+              <img class="shop__img" src="./images/shop-9.svg" alt="shop img" />
               <h3 class="shop__card--title">New GLC – 2023</h3>
               <p class="shop__card--p">
                 4.0 D5 PowerPulse Momentum 5dr AW… Geartronic Estate
@@ -224,13 +224,17 @@
               </div>
               <div class="shop__card--price">
                 <h3 class="shop__card--price--title">$95,000</h3>
-                <h4 class="shop__card--price--subtitle">
+                <h4 class="shop__card--price--subtitle section__styles">
                   View Details <img src="./images/shop-6.svg" alt="shop img" />
                 </h4>
               </div>
             </div>
             <div class="shop__card">
-              <img src="./images/shop-11.svg" alt="shop img" />
+              <img
+                class="shop__img"
+                src="./images/shop-11.svg"
+                alt="shop img"
+              />
               <h3 class="shop__card--title">Audi A6 3.5 – New</h3>
               <p class="shop__card--p">
                 3.5 D5 PowerPulse Momentum 5dr AW… Geartronic Estate
@@ -251,13 +255,17 @@
               </div>
               <div class="shop__card--price">
                 <h3 class="shop__card--price--title">$58,000</h3>
-                <h4 class="shop__card--price--subtitle">
+                <h4 class="shop__card--price--subtitle section__styles">
                   View Details <img src="./images/shop-6.svg" alt="shop img" />
                 </h4>
               </div>
             </div>
             <div class="shop__card">
-              <img src="./images/shop-12.svg" alt="shop img" />
+              <img
+                class="shop__img"
+                src="./images/shop-12.svg"
+                alt="shop img"
+              />
               <h3 class="shop__card--title">Corolla Altis – 2023</h3>
               <p class="shop__card--p">
                 3.5 D5 PowerPulse Momentum 5dr AW… Geartronic Estate
@@ -278,17 +286,21 @@
               </div>
               <div class="shop__card--price">
                 <h3 class="shop__card--price--title">$45,000</h3>
-                <h4 class="shop__card--price--subtitle">
+                <h4 class="shop__card--price--subtitle section__styles">
                   View Details <img src="./images/shop-6.svg" alt="shop img" />
                 </h4>
               </div>
             </div>
-            <div class="shop__card">
+            <!-- <div class="shop__card">
               <div class="shop__card--box">
                 <h4 class="shop__card--subtitle">Great Price</h4>
                 <img src="./images/shop-1.svg" alt="shop img" />
               </div>
-              <img src="./images/shop-13.jpg" alt="shop img" />
+              <img
+                class="shop__img"
+                src="./images/shop-13.jpg"
+                alt="shop img"
+              />
               <h3 class="shop__card--title">Ford Explorer 2023</h3>
               <p class="shop__card--p">3.5 D5 PowerPulse Momentum 5dr AW …</p>
               <div class="shop__card--info">
@@ -311,11 +323,93 @@
                   View Details <img src="./images/shop-6.svg" alt="shop img" />
                 </h4>
               </div>
+            </div> -->
+            <div class="shop__card--control">
+              <button class="shop__btn">
+                <img src="./images/shop-7.svg" alt="shop img" />
+              </button>
+              <button class="shop__btn">
+                <img src="./images/shop-8.svg" alt="shop img" />
+              </button>
             </div>
           </div>
         </div>
       </div>
     </section>
     <!-- shop section ends -->
+    <!-- about section starts -->
+    <section class="about">
+      <div class="container">
+        <div class="about__wrapper">
+          <div class="about__top">
+            <div class="about__top--left">
+              <img
+                class="about__img"
+                src="./images/about-1.svg"
+                alt="about img"
+              />
+            </div>
+            <div class="about__top--right">
+              <h2 class="about__title title">
+                Get A Fair Price For Your Car Sell To Us Today
+              </h2>
+              <p class="about__top--description section__styles">
+                We are committed to providing our customers with exceptional
+                service, competitive pricing, and a wide range of.
+              </p>
+              <h3 class="about__top--list">
+                <img
+                  class="about__top--img"
+                  src="./images/about-2.svg"
+                  alt="about img"
+                />
+                We are the UK’s largest provider, with more patrols in more
+                places
+              </h3>
+              <h3 class="about__top--list">
+                <img
+                  class="about__top--img"
+                  src="./images/about-2.svg"
+                  alt="about img"
+                />
+                You get 24/7 roadside assistance
+              </h3>
+              <h3 class="about__top--list">
+                <img
+                  class="about__top--img"
+                  src="./images/about-2.svg"
+                  alt="about img"
+                />
+                We fix 4 out of 5 cars at the roadsides
+              </h3>
+              <button class="about__btn">
+                <h4 class="about__btn--title section__styles">
+                  Get Started <img src="./images/about-3.svg" alt="about img" />
+                </h4>
+              </button>
+            </div>
+          </div>
+          <div class="about__bottom">
+            <div class="about__bottom--list">
+              <h3 class="about__bottom--title title">836M</h3>
+              <h4 class="about__bottom--p section__styles">CARS FOR SALE</h4>
+            </div>
+            <div class="about__bottom--list">
+              <h3 class="about__bottom--title title">738M</h3>
+              <h4 class="about__bottom--p section__styles">DEALER REVIEWS</h4>
+            </div>
+            <div class="about__bottom--list">
+              <h3 class="about__bottom--title title">100M</h3>
+              <h4 class="about__bottom--p section__styles">VISITORS PER DAY</h4>
+            </div>
+            <div class="about__bottom--list">
+              <h3 class="about__bottom--title title">238M</h3>
+              <h4 class="about__bottom--p section__styles">VERIFIED DEALERS</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- about section ends -->
   </body>
 </html>
