--- a/index.html
+++ b/index.html
@@ -411,5 +411,50 @@
       </div>
     </section>
     <!-- about section ends -->
+    <!-- popular section starts -->
+    <section class="popular">
+      <div class="container">
+        <div class="popular__wrapper">
+          <div class="popular__top">
+            <h2 class="popular__title title">Why Choose Us?</h2>
+          </div>
+          <div class="popular__bottom">
+            <div class="popular__card">
+              <img src="./images/popular-1.svg" alt="popular img" />
+              <h3 class="popular__card--title">Special Financing Offers</h3>
+              <p class="popular__description section__styles">
+                Our stress-free finance department that can find financial
+                solutions to save you money.
+              </p>
+            </div>
+            <div class="popular__card">
+              <img src="./images/popular-2.svg" alt="popular img" />
+              <h3 class="popular__card--title">Trusted Car Dealership</h3>
+              <p class="popular__description section__styles">
+                Our stress-free finance department that can find financial
+                solutions to save you money.
+              </p>
+            </div>
+            <div class="popular__card">
+              <img src="./images/popular-3.svg" alt="popular img" />
+              <h3 class="popular__card--title">Transparent Pricing</h3>
+              <p class="popular__description section__styles">
+                Our stress-free finance department that can find financial
+                solutions to save you money.
+              </p>
+            </div>
+            <div class="popular__card">
+              <img src="./images/popular-4.svg" alt="popular img" />
+              <h3 class="popular__card--title">Expert Car Service</h3>
+              <p class="popular__description section__styles">
+                Our stress-free finance department that can find financial
+                solutions to save you money.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- popular section ends -->
   </body>
 </html>
