feat: added new section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 About <img src="./images/header-1.svg" alt="header img" />
               </li>
               <li>Popular</li>
+              <li>Type</li>
               <li>Contact</li>
               <li>Info</li>
               <li>Blog</li>
@@ -170,14 +171,24 @@
           </div>
           <div class="shop__bottom">
             <div class="shop__card">
-              <!-- <div class="shop__card--box">
-                <h4 class="shop__card--subtitle">Great Price</h4>
-                <img src="./images/shop-1.svg" alt="shop img" />
-              </div> -->
-              <img class="shop__img" src="./images/shop-2.svg" alt="shop img" />
-              <h3 class="shop__card--title">Ford Transit – 2021</h3>
-              <p class="shop__card--p">4.0 D5 PowerPulse Momentum 5dr AW…</p>
-              <div class="shop__card--info">
+              <div class="shop__card--box">
+                <h4 class="shop__card--subtitle section__styles">
+                  Great Price
+                </h4>
+                <img
+                  class="shop__card--box-img"
+                  src="./images/shop-1.svg"
+                  alt="shop img"
+                />
+              </div>
+              <img
+                class="shop__img2"
+                src="./images/shop-2.svg"
+                alt="shop img"
+              />
+              <h3 class="shop__card--title2">Ford Transit – 2021</h3>
+              <p class="shop__card--p2">4.0 D5 PowerPulse Momentum 5dr AW…</p>
+              <div class="shop__card--info2">
                 <h4 class="shop__card--info--title">
                   <img src="./images/shop-3.svg" alt="shop img" />
                   2500 Miles
@@ -191,7 +202,7 @@
                   Manual
                 </h4>
               </div>
-              <div class="shop__card--price">
+              <div class="shop__card--price2">
                 <h3 class="shop__card--price--title">$22,000</h3>
                 <h4 class="shop__card--price--subtitle section__styles">
                   View Details <img src="./images/shop-6.svg" alt="shop img" />
@@ -199,16 +210,26 @@
               </div>
             </div>
             <div class="shop__card">
-              <!-- <div class="shop__card--box">
-                <h4 class="shop__card--subtitle">Low Mileage</h4>
-                <img src="./images/shop-1.svg" alt="shop img" />
-              </div> -->
-              <img class="shop__img" src="./images/shop-9.svg" alt="shop img" />
-              <h3 class="shop__card--title">New GLC – 2023</h3>
-              <p class="shop__card--p">
+              <div class="shop__card--box">
+                <h4 class="shop__card--subtitle2 section__styles">
+                  Low Mileage
+                </h4>
+                <img
+                  class="shop__card--box-img"
+                  src="./images/shop-1.svg"
+                  alt="shop img"
+                />
+              </div>
+              <img
+                class="shop__img2"
+                src="./images/shop-9.svg"
+                alt="shop img"
+              />
+              <h3 class="shop__card--title2">New GLC – 2023</h3>
+              <p class="shop__card--p2">
                 4.0 D5 PowerPulse Momentum 5dr AW… Geartronic Estate
               </p>
-              <div class="shop__card--info">
+              <div class="shop__card--info2">
                 <h4 class="shop__card--info--title">
                   <img src="./images/shop-3.svg" alt="shop img" />
                   50 Miles
@@ -222,7 +243,7 @@
                   Automatic
                 </h4>
               </div>
-              <div class="shop__card--price">
+              <div class="shop__card--price2">
                 <h3 class="shop__card--price--title">$95,000</h3>
                 <h4 class="shop__card--price--subtitle section__styles">
                   View Details <img src="./images/shop-6.svg" alt="shop img" />
@@ -456,5 +477,221 @@
       </div>
     </section>
     <!-- popular section ends -->
+    <!-- type section starts -->
+    <section class="type">
+      <div class="container">
+        <div class="type__wrapper">
+          <div class="type__top">
+            <h2 class="type__title title">Popular Makes</h2>
+            <h3 class="shop__subtitle section__styles">
+              View All <img src="./images/about-3.svg" alt="shop img" />
+            </h3>
+          </div>
+          <div class="type__navigation">
+            <h3 class="type__navigation--title section__styles">Audi</h3>
+            <h3 class="type__navigation--title section__styles">Ford</h3>
+            <h3 class="type__navigation--title section__styles">
+              Mercedes Benz
+            </h3>
+          </div>
+          <div class="type__bottom">
+            <div class="type__card">
+              <img class="type__img" src="./images/type-1.svg" alt="type img" />
+              <div class="type__card--right">
+                <h3 class="type__card--title shop__card--title">
+                  Audi A5 – 2023
+                </h3>
+                <p class="type__p shop__card--p">
+                  2.0 D5 PowerPulse Momentum 5dr AWD… Geartronic Estate
+                </p>
+                <h3 class="type__card--icon shop__card--info--title">
+                  <img src="./images/type.1.svg" alt="type img" />
+                  500 Miles
+                </h3>
+                <h3 class="type__card--icon shop__card--info--title">
+                  <img src="./images/type.2.svg" alt="type img" />
+                  Petrol
+                </h3>
+                <h3 class="type__card--icon shop__card--info--title">
+                  <img src="./images/type.3.svg" alt="type img" />
+                  Automatic
+                </h3>
+                <del>$50,000</del>
+                <div class="type__card--price">
+                  <h3 class="type__card--price-title shop__card--price--title">
+                    $45,000
+                  </h3>
+                  <h4 class="type__card--price-subtitle section__styles">
+                    View Details
+                    <img src="./images/about-3.svg" alt="shop img" />
+                  </h4>
+                </div>
+              </div>
+            </div>
+            <div class="type__card">
+              <img class="type__img" src="./images/type-2.svg" alt="type img" />
+              <div class="type__card--right">
+                <h3 class="type__card--title shop__card--title">
+                  Range Rover SE P440e
+                </h3>
+                <p class="type__p shop__card--p">
+                  2.0 D5 PowerPulse Momentum 5dr AWD… Geartronic Estate
+                </p>
+                <h3 class="type__card--icon shop__card--info--title">
+                  <img src="./images/type.1.svg" alt="type img" />
+                  150 Miles
+                </h3>
+                <h3 class="type__card--icon shop__card--info--title">
+                  <img src="./images/type.2.svg" alt="type img" />
+                  Diesel
+                </h3>
+                <h3 class="type__card--icon shop__card--info--title">
+                  <img src="./images/type.3.svg" alt="type img" />
+                  CVT
+                </h3>
+                <del>$193,400</del>
+                <div class="type__card--price">
+                  <h3 class="type__card--price-title shop__card--price--title">
+                    $120,000
+                  </h3>
+                  <h4 class="type__card--price-subtitle section__styles">
+                    View Details
+                    <img src="./images/about-3.svg" alt="shop img" />
+                  </h4>
+                </div>
+              </div>
+            </div>
+            <div class="type__card">
+              <img class="type__img" src="./images/type-3.svg" alt="type img" />
+              <!-- <div class="type__card--right">
+                <h3 class="type__card--title shop__card--title">
+                  Range Rover SE P440e
+                </h3>
+                <p class="type__p shop__card--p">
+                  2.0 D5 PowerPulse Momentum 5dr AWD… Geartronic Estate
+                </p>
+                <h3 class="type__card--icon shop__card--info--title">
+                  <img src="./images/type.1.svg" alt="type img" />
+                  150 Miles
+                </h3>
+                <h3 class="type__card--icon shop__card--info--title">
+                  <img src="./images/type.2.svg" alt="type img" />
+                  Diesel
+                </h3>
+                <h3 class="type__card--icon shop__card--info--title">
+                  <img src="./images/type.3.svg" alt="type img" />
+                  CVT
+                </h3>
+                <del>$193,400</del>
+                <div class="type__card--price">
+                  <h3 class="type__card--price-title shop__card--price--title">
+                    $120,000
+                  </h3>
+                  <h4 class="type__card--price-subtitle section__styles">
+                    View Details
+                    <img src="./images/about-3.svg" alt="shop img" />
+                  </h4>
+                </div>
+              </div> -->
+            </div>
+            <div class="type__bottom-control">
+              <button class="type__btn shop__btn">
+                <img src="./images/type.4.svg" alt="type img" />
+              </button>
+              <button class="type__btn shop__btn">
+                <img src="./images/type.5.svg" alt="type img" />
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- type section ends -->
+    <!-- contact section starts -->
+    <section class="contact">
+      <div class="container">
+        <div class="contact__wrapper">
+          <div class="contact__top shop__top">
+            <h2 class="contact__title title">Shop BoxCar Your Way</h2>
+            <h3 class="contact__subtitle section__styles">
+              View More <img src="./images/listing-1.svg" alt="shop img" />
+            </h3>
+          </div>
+          <div class="contact__navigation shop__navigation">
+            <h3 class="shop__navigation--title section__styles">
+              New Cars For Sale
+            </h3>
+            <h3 class="shop__navigation--title section__styles">
+              Used Cars For Sale
+            </h3>
+            <h3 class="shop__navigation--title section__styles">
+              Browse By Type
+            </h3>
+            <h3 class="shop__navigation--title section__styles">
+              Browse By Brand
+            </h3>
+          </div>
+          <div class="contact__bottom">
+            <ul class="contact__ul">
+              <li class="contact__li">Ford Cars</li>
+              <li class="contact__li">Honda Cars</li>
+              <li class="contact__li">Hyundai Cars</li>
+              <li class="contact__li">Infiniti Cars</li>
+              <li class="contact__li">Jaguar Cars</li>
+              <li class="contact__li">Jeep Cars</li>
+            </ul>
+            <ul class="contact__ul">
+              <li class="contact__li">Chrysler Cars</li>
+              <li class="contact__li">Citroen Cars</li>
+              <li class="contact__li">Cupra Cars</li>
+              <li class="contact__li">Dacia Cars</li>
+              <li class="contact__li">DS Cars</li>
+              <li class="contact__li">Fiat Cars</li>
+            </ul>
+            <ul class="contact__ul">
+              <li class="contact__li">Land Rover Cars</li>
+              <li class="contact__li">Lexus Cars</li>
+              <li class="contact__li">Mercedes-Benz Cars</li>
+              <li class="contact__li">Mazda Cars</li>
+              <li class="contact__li">MG Cars</li>
+              <li class="contact__li">Kia Cars</li>
+            </ul>
+            <ul class="contact__ul">
+              <li class="contact__li">Abarth Cars</li>
+              <li class="contact__li">Romeo Cars</li>
+              <li class="contact__li">Audi Cars</li>
+              <li class="contact__li">Bentley Cars</li>
+              <li class="contact__li">BMW Cars</li>
+              <li class="contact__li">Chevrolet Cars</li>
+            </ul>
+            <ul class="contact__ul">
+              <li class="contact__li">Mini Cars</li>
+              <li class="contact__li">Mitsubishi Cars</li>
+              <li class="contact__li">Nissan Cars</li>
+              <li class="contact__li">Peugeot Cars</li>
+              <li class="contact__li">Porsche Cars</li>
+              <li class="contact__li">Renault Cars</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- contact section ends -->
+    <!-- info section starts -->
+    <section class="info">
+      <div class="info__wrapper">
+        <div class="info__top">
+          <h2 class="info__title title">What our customers say</h2>
+          <h3 class="info__subtitle section__styles">
+            Rated 4.7 / 5 based on 28,370 reviews Showing our 4 & 5 star reviews
+          </h3>
+        </div>
+        <div class="info__bottom">
+          <img src="./images/info-1.svg" alt="info img" />
+          <div class="info__bottom--right"></div>
+        </div>
+      </div>
+    </section>
+    <!-- info section ends -->
   </body>
 </html>
