--- a/index.html
+++ b/index.html
@@ -679,16 +679,38 @@
     <!-- contact section ends -->
     <!-- info section starts -->
     <section class="info">
-      <div class="info__wrapper">
-        <div class="info__top">
-          <h2 class="info__title title">What our customers say</h2>
-          <h3 class="info__subtitle section__styles">
-            Rated 4.7 / 5 based on 28,370 reviews Showing our 4 & 5 star reviews
-          </h3>
-        </div>
-        <div class="info__bottom">
-          <img src="./images/info-1.svg" alt="info img" />
-          <div class="info__bottom--right"></div>
+      <div class="container">
+        <div class="info__wrapper">
+          <div class="info__top">
+            <h2 class="info__title title">What our customers say</h2>
+            <h3 class="info__subtitle section__styles">
+              Rated 4.7 / 5 based on 28,370 reviews Showing our 4 & 5 star
+              reviews
+            </h3>
+          </div>
+          <div class="info__bottom">
+            <button class="info__btn shop__btn">
+              <img src="./images/shop-7.svg" alt="shop img" />
+            </button>
+
+            <img class="info__img" src="./images/info-1.svg" alt="info img" />
+            <div class="info__bottom--right">
+              <span class="info__images">
+                <img src="./images/info-2.svg" alt="info img" />
+                <img src="./images/info-3.svg" alt="info img" />
+              </span>
+              <h3 class="info__bottom--name">Ali TUFAN</h3>
+              <h4 class="info__bottom--job">Designer</h4>
+              <p class="info__description">
+                I'd suggest Macklin Motors Nissan Glasgow South to a friend
+                because I had great service from my salesman Patrick and all of
+                the team.
+              </p>
+            </div>
+            <button class="info__btn shop__btn">
+              <img src="./images/shop-8.svg" alt="shop img" />
+            </button>
+          </div>
         </div>
       </div>
     </section>
